Fix resize grid button disappearing when grid overflows

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: safe center;
   align-items: center;
 
   gap: 1rem;
